--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
